Fix overflow

--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .container {
     max-width: 1440px;
     margin: auto;
